# portfolio-DLDEPL01_2025

./: .gitignore  README.md  _config.yml  pyproject.toml
1-hypertuning-gridsearch/: notebook.ipynb  report.md  summary.md
2-hypertuning-mlflow/: mlflow.db  notebook.ipynb  report.md  start_server.sh  summary.md
2-hypertuning-mlflow/mlruns/1/afa47234de8d4ad9a52ba79b6f7203ec/artifacts/pytorch_models/: 20250921-1128model.pt
2-hypertuning-mlflow/mlruns/2/1c8db27df6504c42b3d9fc78614c281c/artifacts/pytorch_models/: 20250921-1129model.pt
2-hypertuning-mlflow/mlruns/2/20f5ec77e0f049a197615730643f1392/artifacts/pytorch_models/: 20250921-1134model.pt
2-hypertuning-mlflow/mlruns/2/2c5717a7ddde41ba9a7c17fc1244507b/artifacts/pytorch_models/: 20250921-1132model.pt
2-hypertuning-mlflow/mlruns/2/5f40aacff2e7484bb435f057df654299/artifacts/pytorch_models/: 20250921-1133model.pt
2-hypertuning-mlflow/mlruns/2/714eccc0f1f440b4b5be188ee6b57bbf/artifacts/pytorch_models/: 20250921-1131model.pt
2-hypertuning-mlflow/mlruns/2/825241ede33d4d21a5a0b35b3a4c9a72/artifacts/pytorch_models/: 20250921-1130model.pt
2-hypertuning-mlflow/models/: 20250921-1130model.pt  20250921-1132model.pt  20250921-1134model.pt
3-hypertuning-rnn/: notebook.ipynb  report.md  summary.md
4-hypertuning-ray/: hypertune_cifar.ipynb  report.md  results_hypertuning.csv  summary.md
5-deployment/: summary.md
7-ethics/: summary.md
7-ethics/assignments/: case_study_breeze.md  dag.drawio  ethical_model_comparison.md  sources.bib  sources.md
(+10 files in other folders)
