[project]
name = "portfolio-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "configspace>=1.2.1",
    "hpbandster>=0.7.4",
    "hyperopt>=0.2.7",
    "mads-datasets[torch]>=0.3.14",
    "mltrainer>=0.2.5",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "tomlserializer>=0.2.0",
    "torch-summary>=1.4.5",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.12.11",
]
